--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img src="/assets/images/twitch.svg" class="icon">
       </a>
     </div>
+    <p class="sc"><a href="https://github.com/tacohitbox/garettrum.com">source code</a> - made by <a href="https://tacohitbox.com">tacohitbox</a></p>
     <script src="/js/app.js"></script>
   </body>
 </html>
