--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>GarettRum.com</title>
     <link href="/css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
   </head>
   <body> 
     <h1 class="title">Garett Rum</h1>
