made clicking image refresh the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img class="gart-ns" src="assets/1.jpg">
     </noscript>
     <div class="require-script">
-      <div class="gart"></div>
+      <a href="/"><div class="gart"></div></a>
     </div>
     <div class="soc">
       <a href="https://twitter.com/garettrum">
