fix noscript image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="title">Garett Rum</h1>
     <p>I am a woman connoisseur.</p>
     <noscript>
-      <img class="gart-ns" src="assets/1.jpg">
+      <img class="gart-ns" src="/assets/images/1.jpg">
     </noscript>
     <div class="require-script">
       <a href="/"><div class="gart"></div></a>
